Fixed add button alignment.

--- a/assets/css/modules.css
+++ b/assets/css/modules.css
@@ -24,7 +24,7 @@
 }
 
 .modules-add-button {
-  margin-bottom:-3em;
+  margin-bottom:-4em;
   background:#fff;
   border-color:#ddd;
 }
